fixed link-to-top z-index and adjusted card-carousel display width.

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ header {
 /* ------------------------------------------- */
 
 .fix-bottom-right {
+  z-index: 99;
   position: fixed;
   bottom: 2rem;
   right: 2rem;
@@ -264,4 +265,11 @@ header {
 
 .gf-italic-font {
   font-family: "Courgette", cursive;
+}
+
+
+/* navbar shadow */
+
+.navbar-shadow {
+  box-shadow: 0px 0px 16px #333;
 }
